[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlviser"
version = "0.8.9"
description = "RLViser - Rocket League replay visualizer"
readme = "README.md"
license = "MIT"
authors = [
    {name = "RLViser Contributors"},
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.scripts]
rlviser = "rlviser.__main__:main"

[tool.setuptools]
packages = ["rlviser"]
include-package-data = false

[tool.setuptools.package-data]
rlviser = ["bin/*"]