[build-system]
requires = ["setuptools>=61.0", "setuptools-rust", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyviser"
version = "0.8.9"
description = "PyViser - Rocket League replay visualizer"
readme = "README.md"
license = "MIT"
authors = [
    {name = "RLViser Contributors"},
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.setuptools]
packages = ["pyviser"]
include-package-data = false

[[tool.setuptools-rust.bins]]
target = "pyviser"
path = "Cargo.toml"
features = ["threaded"]
args = ["--no-default-features"]