[build-system]
requires = ["setuptools>=61.0", "setuptools-rust", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyviser"
version = "0.9.14"
description = "PyViser - Rocket League replay visualizer"
readme = "README.md"
license = "MIT"
authors = [
    {name = "RLViser Contributors"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]

[project.scripts]
pyviser = "pyviser:run"

[tool.setuptools]
packages = ["pyviser"]
include-package-data = true

[tool.setuptools.package-data]
pyviser = ["cache.zip"]

[[tool.setuptools-rust.bins]]
target = "pyviser"
path = "Cargo.toml"
features = ["threaded"]
args = ["--no-default-features"]